<resources>
    <string name="app_name">Фазеркрафт-учет</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Меню</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="close">Закрыть</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="refresh">Обновить</string>
    <string name="more_actions">Другие действия</string>
    <string name="select_all">Выбрать все</string>
    <string name="date">Дата</string>
    <string name="quantity">Количество</string>
    <string name="unit_count">Количество (шт.)</string>
    <string name="total_label">Итого:</string>
    <string name="exit">Выйти</string>
    <string name="sep_1">"   /   "</string>
    <string name="access_denied">Нет доступа к разделу</string>
    <string name="account_access_denied">У вашей учетной записи нет прав для просмотра этого раздела</string>
    <string name="product_type">Тип продукции</string>
    <string name="serial_number">Серийный номер</string>
    <string name="uf_0000000">uf-0000000</string>
    <string name="product_serial_number">Модуль: %1$s</string>
    <string name="product_start_at">Запуск: %1$s</string>
    <string name="product_tech_process">Техпроцесс: %1$s</string>
    <string name="products_list">Список модулей</string>
    <string name="create_product">Создать продукт</string>
    <string name="new_product_header">Новый продукт</string>
    <string name="process">Процесс</string>
    <string name="edit_process">Изменить</string>
    <string name="process_edit">Изменение процесса</string>
    <string name="step">Этап</string>
    <string name="steps_header">Все этапы</string>
    <string name="step_header">Этап производства</string>
    <string name="step_name">Название этапа</string>
    <string name="step_subtitle">Этап: %1$s</string>
    <string name="show_steps_button">Показать все этапы</string>
    <string name="close_step_button">Закрыть этап</string>
    <string name="step_edit">Изменение этапа</string>
    <string name="step_executor">Выполнил: %1$s</string>
    <string name="step_completed_at">Завершено: %1$s</string>
    <string name="step_closed">Этап закрыт:</string>
    <string name="closed_at">Этап закрыт: %1$s</string>
    <string name="step_last_title">Этап: %1$s</string>
    <string name="step_last_status_done">Статус: Выполнено</string>
    <string name="step_last_status_pending">Статус: Ожидает начала</string>
    <string name="step_last_desc_done">Этап закрыт</string>
    <string name="step_last_desc_pending">Этап не закрыт</string>
    <string name="step_order_and_name">%1$d. %2$s</string>
    <string name="action_change_performer">Сменить исполнителя</string>
    <string name="action_reset_step">Сбросить этап</string>
    <string name="reset">Сбросить</string>
    <string name="reset_step_title">Сброс этапа производства</string>
    <string name="reset_step_confirm_message">Сбросить этап «%1$s» и все последующие этапы в состояние ожидания?</string>
    <string name="step_reset_success">Этап успешно сброшен</string>
    <string name="status">Статус</string>
    <string name="current_status">Текущий статус</string>
    <string name="new_status">Новый статус</string>
    <string name="status_edit">Редактирование статуса</string>
    <string name="normal">В работе</string>
    <string name="rework">Восстановление</string>
    <string name="scrap">Брак</string>
    <string name="scanner">Сканер</string>
    <string name="zxing_status_prompt">Отсканируйте QR-код</string>
    <string name="scan_result_placeholder">Результат сканирования</string>
    <string name="confirm_scan">Подтвердите сканирование</string>
    <string name="registration">Регистрация</string>
    <string name="qr_code">QR-код</string>
    <string name="generate_qr">Сгенерировать QR‑код</string>
    <string name="plan">План</string>
    <string name="plan_day">План на день</string>
    <string name="add_plan">Добавление плана</string>
    <string name="copy_plan">копирование плана</string>
    <string name="employee">Сотрудник</string>
    <string name="employee_selection">Выбор сотрудника</string>
    <string name="planed">Запланировано:</string>
    <string name="done">Выполнено:</string>
    <string name="employee_plan_products">Факт на дату: %1$s</string>
    <string name="no_plans_for_day">Для выбранной даты нет планов</string>
    <string name="next_period">Следующий период</string>
    <string name="previous_period">Предыдущий период</string>
    <string name="storage">Склад</string>
    <string name="overview">Остатки</string>
    <string name="products_storage">Продукция на складе</string>
    <string name="products_in_production">Модули в производстве</string>
    <string name="products_rework_scrap">Модули брак/восстановление</string>
    <string name="new_packaging">Новая упаковка</string>
    <string name="packaging_number">Номер упаковки</string>
    <string name="create_packaging">Создать упаковку</string>
    <string name="packaging_boxes">Упаковок</string>
    <string name="packaging_count">Количество упаковок:</string>
    <string name="packaging_count_format">Упаковок сформировано: %1$d</string>
    <string name="packaging_contents">Модули в упаковке</string>
    <string name="packaging_for_shipment">Упаковки для отправки</string>
    <string name="products_count">Количество модулей: </string>
    <string name="total_items_count">Всего: %1$d модулей</string>
    <string name="total_packaging_count">Всего: %1$d упаковок</string>
    <string name="items_count">Позиций: %1$d</string>
    <string name="items_in_box">%1$s × %2$d шт.</string>
    <string name="module_quantity_format">Количество: %1$d шт.</string>
    <string name="state_count">Количество: %1$d</string>
    <string name="chip_progress_format">%1$s: %2$d / %3$d шт.</string>
    <string name="shipped">Отгрузки</string>
    <string name="shipped_by_date">Отгрузки на дату: %1$s</string>
    <string name="shipped_partitions">Отгруженные партии</string>
    <string name="no_products_in_storage">Нет упакованных товаров для отгрузки!</string>
    <string name="empty_production">Нет модулей в производстве!</string>
    <string name="no_product_for_packaging">Нет доступных продуктов для упаковки</string>
    <string name="empty_rework_scrap">Нет модулей в статусе брак/восстановление</string>
    <string name="no_shipped_partitions">Нет отгруженных партий</string>
    <string name="orders">Заказы</string>
    <string name="orders_manage">Управление заказами</string>
    <string name="add_order">Добавить заказ</string>
    <string name="edit_order">Редактировать заказ</string>
    <string name="order_creation">Создание заказа</string>
    <string name="selected_order">Выбранный заказ</string>
    <string name="order_menu">Меню заказа</string>
    <string name="close_order">Закрыть заказ</string>
    <string name="order_details_format">Заказ ID: %1$s</string>
    <string name="order_params">Основные параметры</string>
    <string name="order_items">Состав заказа</string>
    <string name="add_item">Добавить позицию</string>
    <string name="delete_item">Удалить позицию</string>
    <string name="add_packaging">Добавить упаковки</string>
    <string name="add_to_order">Добавление в заказ</string>
    <string name="contract_number">Номер договора</string>
    <string name="contract_date">Дата договора</string>
    <string name="contract_info_format">Договор № %1$s от %2$s</string>
    <string name="plan_shipment_date">Плановая дата отгрузки</string>
    <string name="planned_shipment_format">План отгрузки: %1$s</string>
    <string name="shipment_status_format">Отгружен: %1$s</string>
    <string name="order_header_active">В работе</string>
    <string name="order_header_completed">Завершенные</string>
    <string name="order_stats_format">Упаковок: %1$d • Модулей: %2$d</string>
    <string name="order_progress_format">%1$d / %2$d шт.</string>
    <string name="packaging_title_format">Упаковки: Договор № %1$s</string>
    <string name="added_modules">Собрано модулей:</string>
    <string name="empty_orders">Список заказов пуст</string>
    <string name="no_packaging_in_order">Нет упаковок в заказе</string>
    <string name="inventory">Инв.</string>
    <string name="inventory_new">Новая инвентаризация</string>
    <string name="inventory_name_format">Инвентаризация № %1$d</string>
    <string name="inventory_status_open">Открыта</string>
    <string name="inventory_status_closed">Закрыта</string>
    <string name="delete_inventory_title">Удалить инвентаризацию?</string>
    <string name="delete_inventory_message">Вы уверены, что хотите удалить инвентаризацию № %1$d?</string>
    <string name="inventory_by_stages">Остатки по этапам</string>
    <string name="inventory_results_title">Инвентаризация № %1$d</string>
    <string name="inventory_summary_db">В производстве</string>
    <string name="inventory_summary_scanned">Отсканировано</string>
    <string name="inventory_summary_diff">Расхождения</string>
    <string name="product_status_format">Статус: %1$s</string>
    <string name="inventory_db_count">В базе: %1$d</string>
    <string name="inventory_scanned_count">Отсканировано: %1$d</string>
    <string name="inventory_missing_count">− %1$d</string>
    <string name="inventory_unexpected_count">+ %1$d</string>
    <string name="inventory_matched_count">= %1$d</string>
    <string name="last_scanned">Последний отсканированный</string>
    <string name="inventory_item_scanned_at">Отсканировано: %1$s</string>
    <string name="inventory_add_items">Добавить</string>
    <string name="inventory_compare_and_close">Сравнить</string>
    <string name="inventory_finish_button">Завершить</string>
    <string name="inventory_empty">Список инвентаризации пуст</string>
    <string name="inventory_status_missing">Отсутствует</string>
    <string name="inventory_status_unexpected">Лишний</string>
    <string name="inventory_status_mismatch">Ошибка этапа</string>
    <string name="inventory_status_matched">Совпал</string>
    <string name="inventory_filter_all">Все продукты</string>
    <string name="inventory_filter_matched">ОК</string>
    <string name="inventory_filter_missing">Нехватка</string>
    <string name="inventory_filter_mismatch">Ошибка</string>
    <string name="inventory_filter_unexpected">Лишние</string>
    <string name="inventory_step_accounting_label">По учету:</string>
    <string name="inventory_step_inventory_label">Фактически:</string>
    <string name="step_missing_packed">Отсутствует/Упакован</string>
    <string name="step_not_scanned">Не отсканирован</string>
    <string name="resolve_step_title">Утвердить правильный этап:</string>
    <string name="action_choose_custom_step">Выбрать другой этап…</string>
    <string name="compare_status_matched">Совпал</string>
    <string name="compare_status_step_mismatch">Ошибка этапа</string>
    <string name="compare_status_missing">Отсутствует</string>
    <string name="compare_status_unexpected">Лишний</string>
    <string name="product_not_found">Продукт не найден</string>
    <string name="title_all_conflicts">Все конфликты</string>
    <string name="title_missing_items">Недостача</string>
    <string name="title_mismatch_items">Расхождение этапов</string>
    <string name="in_database">По базе данных:</string>
    <string name="in_inventory_result">При инвентаризации:</string>
    <string name="step_not_found">Этап: %1$s (не найден)</string>
    <string name="not_scanned">Не обнаружен</string>
    <string name="performed_at_label">Отсканирован: %1$s</string>
    <string name="performed_at_none">Дата скана отсутствует</string>
    <string name="conflict_missing">Не найден</string>
    <string name="conflict_db_ahead">Учёт опережает</string>
    <string name="conflict_scan_ahead">Учёт отстаёт</string>
</resources>