<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/registrationFragment"
        android:icon="@drawable/ic_registration"
        android:title="@string/registration" />
    <item
        android:id="@+id/dayPlanFragment"
        android:icon="@drawable/ic_day_plan"
        android:title="@string/plan" />
    <item
        android:id="@+id/scannerFragment"
        android:icon="@drawable/ic_scanner"
        android:title="@string/scanner" />
    <item
        android:id="@+id/productsInventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/inventory" />
    <item
        android:id="@+id/storageContainerFragment"
        android:icon="@drawable/ic_storage"
        android:title="@string/storage" />
</menu>