<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="16dp"
    tools:context=".activity.AddDayPlanFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_plan"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Форма -->
    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <!-- Сотрудник -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmployee"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/actvEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:importantForAutofill="no"
                android:inputType="none"
                tools:text="Сидоров" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Дата -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:importantForAutofill="no"
                android:inputType="none"
                tools:text="27.02.2026" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Процесс -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProcess"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/process"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/actvProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:importantForAutofill="no"
                android:inputType="none"
                tools:text="УФ-3-20-ПС" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Этап -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/step"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/actvStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:importantForAutofill="no"
                android:inputType="none"
                tools:text="Склейка корпуса" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Количество -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilQty"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/quantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                tools:text="10" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Основная кнопка -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatePlan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formContainer" />

    <ProgressBar
        android:id="@+id/progressCreatePlan"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
